@@ -6,7 +6,10 @@ import de.justinharder.trainharder.domain.model.Kraftwert;
 import de.justinharder.trainharder.domain.model.enums.Geschlecht;
 import de.justinharder.trainharder.domain.model.enums.Kraftlevel;
 import de.justinharder.trainharder.domain.model.enums.Uebungsart;
+import de.justinharder.trainharder.domain.repository.KraftwertRepository;
+import jakarta.enterprise.context.Dependent;
 import lombok.NonNull;
+import lombok.RequiredArgsConstructor;
 
 import java.math.BigDecimal;
 import java.util.Collections;
@@ -14,12 +17,18 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
+@Dependent
+@RequiredArgsConstructor
 public class KraftlevelErmittlung
 {
+	@NonNull
+	private final KraftwertRepository kraftwertRepository;
+
 	public Kraftlevel ermittle(@NonNull Benutzer benutzer)
 	{
-		var gewichtsklasse = ermittleGewichtsklasse(benutzer.getBenutzerangabe().getGeschlecht(), benutzer.getKoerpergewicht());
-		var total = ermittleTotal(benutzer.getKraftwerte());
+		var gewichtsklasse =
+			ermittleGewichtsklasse(benutzer.getBenutzerangabe().getGeschlecht(), benutzer.getKoerpergewicht());
+		var total = ermittleTotal(kraftwertRepository.findeAlleMitBenutzer(benutzer.getId()));
 		var totals = ermittleTotals(benutzer.getBenutzerangabe().getGeschlecht(), gewichtsklasse);
 		var uebertroffeneTotals = totals.keySet().stream()
 			.filter(t -> Double.compare(t, total.doubleValue()) < 0)
@@ -47,18 +56,21 @@ public class KraftlevelErmittlung
 
 	private Map<Integer, Kraftlevel> ermittleTotals(Geschlecht geschlecht, int gewichtsklasse)
 	{
-		return (geschlecht.equals(Geschlecht.WEIBLICH) ? Konstanten.TOTALS_FRAUEN : Konstanten.TOTALS_MAENNER).get(gewichtsklasse);
+		return (geschlecht.equals(Geschlecht.WEIBLICH) ? Konstanten.TOTALS_FRAUEN : Konstanten.TOTALS_MAENNER)
+			.get(gewichtsklasse);
 	}
 
 	private int ermittleGewichtsklasse(Geschlecht geschlecht, BigDecimal koerpergewicht)
 	{
 		return Collections.min(ermittleGewichtsklassen(geschlecht).stream()
 			.filter(gk -> gk >= koerpergewicht.intValueExact())
-			.collect(Collectors.toList()));
+			.toList());
 	}
 
 	private List<Integer> ermittleGewichtsklassen(Geschlecht geschlecht)
 	{
-		return geschlecht.equals(Geschlecht.WEIBLICH) ? Konstanten.GEWICHTSKLASSEN_FRAUEN : Konstanten.GEWICHTSKLASSEN_MAENNER;
+		return geschlecht.equals(Geschlecht.WEIBLICH)
+			? Konstanten.GEWICHTSKLASSEN_FRAUEN
+			: Konstanten.GEWICHTSKLASSEN_MAENNER;
 	}
 }
